force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <label>장비</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>