force-app/main/default/objects/Equipment__c/fields/EquipmentCode__c.field-meta.xml
<CustomField>
    <fullName>EquipmentCode__c</fullName>
    <label>Equipment Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>