force-app/main/default/objects/Equipment__c/fields/QuantityAsset__c.field-meta.xml
<CustomField>
    <fullName>QuantityAsset__c</fullName>
    <label>Quantity Asset</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>