force-app/main/default/objects/Equipment__c/fields/QuantityBalance__c.field-meta.xml
<CustomField>
    <fullName>QuantityBalance__c</fullName>
    <formula>QuantityAsset__c - QuantityRequest__c - QuantityDelivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>