force-app/main/default/objects/Equipment__c/fields/QuantityDelivery__c.field-meta.xml
<CustomField>
    <fullName>QuantityDelivery__c</fullName>
    <label>Quantity Delivery</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>