force-app/main/default/objects/Equipment__c/fields/QuantityRequest__c.field-meta.xml
<CustomField>
    <fullName>QuantityRequest__c</fullName>
    <label>Quantity Request</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>