force-app/main/default/objects/Equipment__c/fields/QuantityReturn__c.field-meta.xml
<CustomField>
    <fullName>QuantityReturn__c</fullName>
    <label>Quantity Return</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>