force-app/main/default/objects/Equipment__c/fields/StockKeepingUnit__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnit__c</fullName>
    <label>Equipment SKU</label>
    <length>180</length>
    <type>Text</type>
</CustomField>